  TEZ-2468. Change the minimum Java version to Java 7.
  TEZ-2646. Add scheduling casual dependency for attempts
  TEZ-2647. Add input causality dependency for attempts
  TEZ-2633. Allow VertexManagerPlugins to receive and report based on attempts
  instead of tasks
  TEZ-2650. Timing details on Vertex state changes

ALL CHANGES:
  TEZ-2630. TezChild receives IP address instead of FQDN.
  TEZ-2684. ShuffleVertexManager.parsePartitionStats throws IllegalStateException: Stats should be initialized.
  TEZ-2172. FetcherOrderedGrouped using List to store InputAttemptIdentifier can lead to some inefficiency during remove() operation.
  TEZ-2613. Fetcher(unordered) using List to store InputAttemptIdentifier can lead to some inefficiency during remove() operation.
  TEZ-2645. Provide standard analyzers for job analysis.
  TEZ-2627. Support for Tez Job Priorities.
  TEZ-2623. Fix module dependencies related to hadoop-auth.
  TEZ-2464. Move older releases to dist archive.
  TEZ-2239. Update Tez UI docs to explain how to configure history url for YARN.
  TEZ-2602. Throwing EOFException when launching MR job.
  TEZ-2496. Consider scheduling tasks in ShuffleVertexManager based on the partition sizes from the source.
  TEZ-2616. Fix build warning by undefined version of maven-findbugs-plugin.
  TEZ-2588. Improper argument name
  TEZ-2575. Handle KeyValue pairs size which do not fit in a single block.
  TEZ-2599. Dont send obsoleted data movement events to tasks
  TEZ-2542. TezDAGID fromString array length check.
  TEZ-2296. Add option to print counters for tez-examples.
  TEZ-2570. Fix license header issue for eps image files.
  TEZ-2378. In case Fetcher (unordered) fails to do local fetch, log in debug mode to reduce log size.
  TEZ-2558. Upload additional Tez images.
  TEZ-2486. Update tez website to include links based on
    http://www.apache.org/foundation/marks/pmcs.html#navigation.
  TEZ-2548. TezClient submitDAG can hang if the AM is in the process of shutting down.