@@ -23,11 +23,11 @@ import java.util.Set;
 
 import javax.annotation.Nullable;
 
+import org.apache.tez.common.RPCUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.apache.hadoop.classification.InterfaceAudience.Private;
 import org.apache.hadoop.ipc.RPC;
-import org.apache.hadoop.ipc.RemoteException;
 import org.apache.hadoop.yarn.api.records.ApplicationId;
 import org.apache.hadoop.yarn.api.records.ApplicationReport;
 import org.apache.hadoop.yarn.api.records.YarnApplicationState;
@@ -52,6 +52,7 @@ import com.google.protobuf.ServiceException;
 
 @Private
 public class DAGClientRPCImpl extends DAGClient {
+
   private static final Logger LOG = LoggerFactory.getLogger(DAGClientRPCImpl.class);
 
   private static final String DAG_NOT_RUNNING_CLASS_NAME =
@@ -96,6 +97,9 @@ public class DAGClientRPCImpl extends DAGClient {
       } catch (TezException e) {
         resetProxy(e); // create proxy again
         throw e;
+      } catch (IOException e) {
+        resetProxy(e); // create proxy again
+        throw e;
       }
     }
 
@@ -111,6 +115,9 @@ public class DAGClientRPCImpl extends DAGClient {
       try {
         return getVertexStatusViaAM(vertexName, statusOptions);
       } catch (TezException e) {
+        resetProxy(e); // create proxy again
+        throw e;
+      } catch (IOException e) {
         resetProxy(e); // create proxy again
         throw e;
       }
@@ -176,22 +183,15 @@ public class DAGClientRPCImpl extends DAGClient {
         proxy.getDAGStatus(null,
           requestProtoBuilder.build()).getDagStatus(), DagStatusSource.AM);
     } catch (ServiceException e) {
-      final Throwable cause = e.getCause();
-      if (cause instanceof RemoteException) {
-        RemoteException remoteException = (RemoteException) cause;
-        if (DAG_NOT_RUNNING_CLASS_NAME.equals(remoteException.getClassName())) {
-          throw new DAGNotRunningException(remoteException.getMessage());
-        }
-      }
-
-      // TEZ-151 retrieve wrapped TezException
+      RPCUtil.unwrapAndThrowException(e);
+      // Should not reach here
       throw new TezException(e);
     }
   }
 
   VertexStatus getVertexStatusViaAM(String vertexName,
       Set<StatusGetOpts> statusOptions)
-      throws TezException {
+      throws TezException, IOException {
     if (LOG.isDebugEnabled()) {
       LOG.debug("GetVertexStatus via AM for app: " + appId + " dag: " + dagId
           + " vertex: " + vertexName);
@@ -211,7 +211,8 @@ public class DAGClientRPCImpl extends DAGClient {
         proxy.getVertexStatus(null,
           requestProtoBuilder.build()).getVertexStatus());
     } catch (ServiceException e) {
-      // TEZ-151 retrieve wrapped TezException
+      RPCUtil.unwrapAndThrowException(e);
+      // Should not reach here
       throw new TezException(e);
     }
   }
